--- a/src/SAML2.Profiles.DKSAML20.Tests/SAML2.Profiles.DKSAML20.Tests.csproj
+++ b/src/SAML2.Profiles.DKSAML20.Tests/SAML2.Profiles.DKSAML20.Tests.csproj
@@ -36,9 +36,9 @@
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="SAML2, Version=1.0.0.5, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="SAML2, Version=2.2.4.17864, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\SAML2.1.0.0.5\lib\net35\SAML2.dll</HintPath>
+      <HintPath>..\packages\SAML2.2.2.4.0\lib\net35\SAML2.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -52,11 +52,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssertionUtil.cs" />
-    <Compile Include="DKSaml20ProfileValidationTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validation\DKSaml20SubjectConfirmationValidatorTests.cs" />
+    <Compile Include="Validation\DKSaml20SubjectValidatorTests.cs" />
+    <Compile Include="Validation\DKSaml20StatementValidatorTests.cs" />
+    <Compile Include="Validation\DKSaml20AssertionValidatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Assertions\Saml2Assertion_01">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
