--- a/src/SAML2.Profiles.DKSAML20.Tests/SAML2.Profiles.DKSAML20.Tests.csproj
+++ b/src/SAML2.Profiles.DKSAML20.Tests/SAML2.Profiles.DKSAML20.Tests.csproj
@@ -36,9 +36,8 @@
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="SAML2, Version=2.2.4.17864, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\SAML2.2.2.4.0\lib\net35\SAML2.dll</HintPath>
+    <Reference Include="SAML2">
+      <HintPath>..\packages\SAML2.2.3.0.0\lib\net35\SAML2.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
