--- a/src/SAML2.Profiles.DKSAML20.Tests/packages.config
+++ b/src/SAML2.Profiles.DKSAML20.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NUnit" version="2.6.2" targetFramework="net40" />
-  <package id="SAML2" version="2.2.4.0" targetFramework="net40" />
+  <package id="SAML2" version="2.3.0.0" targetFramework="net40" />
+  <package id="StyleCop.MSBuild" version="4.7.45.0" targetFramework="net40" developmentDependency="true" />
 </packages>
