--- a/src/SAML2.Profiles.DKSAML20/SAML2.Profiles.DKSAML20.csproj
+++ b/src/SAML2.Profiles.DKSAML20/SAML2.Profiles.DKSAML20.csproj
@@ -34,9 +34,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="SAML2, Version=2.2.4.17864, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\SAML2.2.2.4.0\lib\net35\SAML2.dll</HintPath>
+    <Reference Include="SAML2">
+      <HintPath>..\packages\SAML2.2.3.0.0\lib\net35\SAML2.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
