--- a/src/SAML2.Profiles.DKSAML20/packages.config
+++ b/src/SAML2.Profiles.DKSAML20/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="SAML2" version="2.2.4.0" targetFramework="net35" />
+  <package id="SAML2" version="2.3.0.0" targetFramework="net35" />
+  <package id="StyleCop.MSBuild" version="4.7.45.0" targetFramework="net35" developmentDependency="true" />
 </packages>
